<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@android:color/white">
    
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	    android:text="@string/privacy_control_description"
	    android:textColor="@android:color/black"
	    android:textSize="20sp"
	    android:layout_margin="10dp"
	    android:id="@+id/msg"
	    />
	<Button
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/msg"
	    android:layout_centerHorizontal="true"
	    android:text="@string/start"
	    android:textColor="@android:color/white"
	    android:textSize="18sp"
	    android:id="@+id/button1"
	    android:padding="5dp"
	    android:background="@drawable/btn_func_left"
	    />
	<EditText
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/msg"
	    android:layout_centerHorizontal="true"
	    android:hint="@string/authentication_hint"
	    android:textColor="@android:color/black"
	    android:textSize="20sp"
	    android:id="@+id/input"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:layout_marginBottom="10dp"
	    android:inputType="textVisiblePassword"
	    android:textColorHint="@android:color/black"
	    />
	<Button
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/input"
	    android:layout_centerHorizontal="true"
	    android:text="@string/confirm"
	    android:textColor="@android:color/white"
	    android:background="@drawable/btn_func_left"
	    android:textSize="18sp"
	    android:padding="5dp"
	    android:id="@+id/button2"
	    />
</RelativeLayout>