<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/upload"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@drawable/btn_func_left"
            android:text="@string/enroll_upload"
            android:textColor="@android:color/white"
            android:textSize="23sp" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@drawable/btn_func_left"
            android:text="@string/enroll_cancel"
            android:textColor="@android:color/white"
            android:textSize="23sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/enroll_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_bar"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:cacheColorHint="#00000000" />

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/no_enroll_lesson"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:visibility="invisible" />

</RelativeLayout>