<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@android:color/white" >

    <LinearLayout
        xmlns:img_btn="http://schemas.android.com/apk/res/com.hiwhu.UI"
        android:id="@+id/bottom_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <com.hiwhu.widget.FuncImageButton
            android:id="@+id/zixun_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_func_left"
            android:gravity="center"
            img_btn:src="@drawable/zixun_list"
            img_btn:text="@string/zixun_list" />

        <com.hiwhu.widget.FuncImageButton
            android:id="@+id/preferences"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_func_left"
            android:gravity="center"
            img_btn:src="@drawable/zixun_liked_gray"
            img_btn:text="@string/zixun_liked" />

        <com.hiwhu.widget.FuncImageButton
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_func_left"
            android:gravity="center"
            img_btn:src="@drawable/back"
            img_btn:text="@string/back" />

    </LinearLayout>

    <com.hiwhu.widget.PullToRefreshLayout
        android:id="@+id/test_list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/bottom_bar"
        android:cacheColorHint="#00000000"
        android:divider="#ffffff"
        android:dividerHeight="1dp" />

</RelativeLayout>